blog sayfası geliştirildi

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,41 @@
     <h1>HAKKIMDA</h1>
     <P>Merhaba.Ben Mira KARATAŞ!Satranç oynamayı severim.Web geliştirme ile ilgileniyorum.</P>
     <!--bu proje benim hakkımda bilgiler içerir-->
+    <h2>İlgi Alanlarım</h2>
+    <ol>
+        <h3><b>1.Film</b></h3>
+    </ol>
+    <ul style=" list-style-type:circle">
+        <li><a href="https://www.imdb.com/title/tt2294629/?ref_=ext_shr_lnk" target="_blank">Frozen</a></li>
+        <li>Moana</li>
+    </ul>
+    <ol>
+        <h3><b>2.Diziler</b></h3>
+    </ol>
+    <ul style=" list-style-type:circle">
+        <li><a href="https://www.imdb.com/title/tt15676170/?ref_=ext_shr_lnk">Atatürk</a></li>
+        <li>Battlestar Galactia</li>
+    </ul>
+    <ol>
+        <h3><b>3.Kitap</b></h3>
+    </ol>
+    <ul style=" list-style-type:circle">
+        <li><a href="https://www.goodreads.com/book/show/25383991-bilinmeyen-bir-kad-n-n-mektubu"> Bilinmeyen Bir
+                Kadının Mektubu</a></li>
+        <li>Kavgam</li>
+    </ul>
+    <h2><strong>SEVDİĞİM FİLMLER</strong></h2>
+    <img style="width: 500px; height: auto;" src="https://www.donanimhaber.com/images/images/haber/162250/1400x1400moana-animasyonunun-gercek-film-oluyor.jpg"
+        alt="">
+    <p>Moana 2016 ABD yapımı 3 boyutlu müzikal macera filmidir. Walt Disney Pictures tarafından dağıtılan yapımın
+        yönetmenliğini Ron Clements ve John Musker üstlenmiştir.
+    </p>
+
+
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
